--- a/index.html
+++ b/index.html
@@ -111,18 +111,19 @@
   .project-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* 3 columns */
-    gap: 10px; /* Reduced gap to make tiles smaller */
+    gap: 10px; /* Reduced gap for compact layout */
     margin-bottom: 40px;
   }
 
   .project-card {
     background-color: var(--card);
-    border-radius: 10px; /* Smaller border radius for compact tiles */
-    padding: 10px;
+    border-radius: 8px; /* Smaller border radius for compactness */
+    padding: 8px;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s, box-shadow 0.2s;
-    max-width: 180px; /* Limit width of the tiles */
+    max-width: 150px; /* Reduced width for a compact design */
+    height: 180px; /* Reduced height to make the tiles smaller */
     margin: 0 auto;
   }
 
@@ -138,7 +139,7 @@
   }
 
   .project-card h3 {
-    font-size: 14px; /* Smaller text size */
+    font-size: 14px; /* Smaller text size for better fit */
     color: var(--highlight);
     margin-bottom: 5px;
   }
@@ -267,7 +268,7 @@
       </div>
     </section>
 
- <!-- Academic Projects -->
+<!-- Academic Projects -->
 <section id="academic-projects">
   <h2>📘 Academic Projects</h2>
   <div class="project-grid">
@@ -276,11 +277,11 @@
       <h3><a href="Academic/Participatory/Participatory.html">Participatory Planning Studio</a></h3>
     </div>
     <div class="project-card">
-      <img src="https://img.icons8.com/ios/50/000000/project-planning.png" alt="Project Planning Studio"/>
+      <img src="https://img.icons8.com/ios/50/000000/planning.png" alt="Project Planning Studio"/>
       <h3><a href="Academic/Project/Project.html">Project Planning Studio</a></h3>
     </div>
     <div class="project-card">
-      <img src="https://img.icons8.com/ios/50/000000/transport.png" alt="Transportation Planning Studio"/>
+      <img src="https://img.icons8.com/ios/50/000000/car.png" alt="Transportation Planning Studio"/>
       <h3><a href="Academic/Transportation/Transportation.html">Transportation Planning Studio</a></h3>
     </div>
     <div class="project-card">
@@ -292,19 +293,19 @@
       <h3><a href="Academic/Rural/Rural.html">Rural Planning Studio</a></h3>
     </div>
     <div class="project-card">
-      <img src="https://img.icons8.com/ios/50/000000/code.png" alt="Programming Studio"/>
+      <img src="https://img.icons8.com/ios/50/000000/coding.png" alt="Programming Studio"/>
       <h3><a href="Academic/Program/Program.html">Programming Studio</a></h3>
     </div>
     <div class="project-card">
-      <img src="https://img.icons8.com/ios/50/000000/gis.png" alt="GIS and Remote Sensing Studio"/>
+      <img src="https://img.icons8.com/ios/50/000000/earth.png" alt="GIS and Remote Sensing Studio"/>
       <h3><a href="Academic/GIS/GIS.html">GIS and Remote Sensing Studio</a></h3>
     </div>
     <div class="project-card">
-      <img src="https://img.icons8.com/ios/50/000000/urban.png" alt="Urban Planning Studio"/>
+      <img src="https://img.icons8.com/ios/50/000000/building.png" alt="Urban Planning Studio"/>
       <h3><a href="Academic/Urban/Urban.html">Urban Planning Studio</a></h3>
     </div>
     <div class="project-card">
-      <img src="https://img.icons8.com/ios/50/000000/landscape.png" alt="Landscape Planning Studio"/>
+      <img src="https://img.icons8.com/ios/50/000000/plant.png" alt="Landscape Planning Studio"/>
       <h3><a href="Academic/Landscape/Landscape.html">Landscape Planning Studio</a></h3>
     </div>
     <div class="project-card">
