--- a/index.html
+++ b/index.html
@@ -284,37 +284,37 @@
 
       <div class="project-grid">
         <div class="project-card">
-          <img src="images/icons/participatory.png" alt="Participatory Planning Studio icon">
+          <img src="images/icons/1.jpg" alt="Participatory Planning Studio icon">
           <h3><a href="Academic/Participatory/Participatory.html">Participatory Planning Studio</a></h3>
         </div>
 
         <div class="project-card">
-          <img src="images/icons/project-planning.png" alt="Project Planning Studio icon">
+          <img src="images/icons/2.jpg" alt="Project Planning Studio icon">
           <h3><a href="Academic/Project/Project.html">Project Planning Studio</a></h3>
         </div>
 
         <div class="project-card">
-          <img src="images/icons/transportation.png" alt="Transportation Planning Studio icon">
+          <img src="images/icons/3.jpg" alt="Transportation Planning Studio icon">
           <h3><a href="Academic/Transportation/Transportation.html">Transportation Planning Studio</a></h3>
         </div>
 
         <div class="project-card">
-          <img src="images/icons/regional.png" alt="Regional Planning Studio icon">
+          <img src="images/icons/12.jpg" alt="Regional Planning Studio icon">
           <h3><a href="Academic/Regional/Regional.html">Regional Planning Studio</a></h3>
         </div>
 
         <div class="project-card">
-          <img src="images/icons/rural.png" alt="Rural Planning Studio icon">
+          <img src="images/icons/4.jpg" alt="Rural Planning Studio icon">
           <h3><a href="Academic/Rural/Rural.html">Rural Planning Studio</a></h3>
         </div>
 
         <div class="project-card">
-          <img src="images/icons/programming.png" alt="Programming Studio icon">
+          <img src="images/icons/11.jpg" alt="Programming Studio icon">
           <h3><a href="Academic/Program/Program.html">Programming Studio</a></h3>
         </div>
 
         <div class="project-card">
-          <img src="images/icons/gis-rs.png" alt="GIS and Remote Sensing icon">
+          <img src="images/icons/8.jpg" alt="GIS and Remote Sensing icon">
           <h3><a href="Academic/GIS/GIS.html">GIS and Remote Sensing Studio</a></h3>
         </div>
 
@@ -324,22 +324,22 @@
         </div>
 
         <div class="project-card">
-          <img src="images/icons/landscape.png" alt="Landscape Planning Studio icon">
+          <img src="images/icons/7.jpg" alt="Landscape Planning Studio icon">
           <h3><a href="Academic/Landscape/Landscape.html">Landscape Planning Studio</a></h3>
         </div>
 
         <div class="project-card">
-          <img src="images/icons/site-area.png" alt="Site and Area Planning Studio icon">
+          <img src="images/icons/6.jpg" alt="Site and Area Planning Studio icon">
           <h3><a href="Academic/Site/Site.html">Site and Area Planning Studio</a></h3>
         </div>
 
         <div class="project-card">
-          <img src="images/icons/survey.png" alt="Social and Physical Surveys icon">
+          <img src="images/icons/10.jpg" alt="Social and Physical Surveys icon">
           <h3><a href="Academic/Social/Social.html">Social and Physical Surveys</a></h3>
         </div>
 
         <div class="project-card">
-          <img src="images/icons/cartography.png" alt="Cartography Workshop icon">
+          <img src="images/icons/9.jpg" alt="Cartography Workshop icon">
           <h3><a href="Academic/Carto/Carto.html">Cartography Workshop</a></h3>
         </div>
       </div>
