--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         </div>
 
         <div class="project-card">
-          <img src="images/icons/2.jpg" alt="Project Planning Studio icon">
+          <img src="images/icons/2.png" alt="Project Planning Studio icon">
           <h3><a href="Academic/Project/Project.html">Project Planning Studio</a></h3>
         </div>
 
@@ -319,7 +319,7 @@
         </div>
 
         <div class="project-card">
-          <img src="images/icons/urban.png" alt="Urban Planning Studio icon">
+          <img src="images/icons/5.jpg" alt="Urban Planning Studio icon">
           <h3><a href="Academic/Urban/Urban.html">Urban Planning Studio</a></h3>
         </div>
 
