--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     }
 
     .project-card {
-      background-color: var(--card);
+      background-color: white;
       border: 1px solid var(--border);
       border-radius: 10px;
       padding: 14px 12px;
@@ -143,8 +143,8 @@
     }
 
     .project-card img {
-      width: 56px; /* your icon size */
-      height: 56px;
+      width: 64px; /* your icon size */
+      height: 64px;
       object-fit: contain;
       margin: 2px auto 10px auto;
       display: block;
