--- a/index.html
+++ b/index.html
@@ -345,6 +345,42 @@
       </div>
     </section>
 
+    <section id="skills-badges">
+  <style>
+    #skills-badges .badge-grid{
+      display: grid;
+      grid-template-columns: repeat(4, max-content); /* 4 columns */
+      gap: 12px 12px; /* tidy spacing */
+      align-items: center;
+      font-family: "Times New Roman", Times, serif; /* requested font */
+    }
+    #skills-badges .badge-grid img{
+      display: block;
+      height: 32px; /* keeps a neat row height regardless of label length */
+    }
+  </style>
+
+  <div class="badge-grid" aria-label="Tools and Platfroms">
+    <img src="https://img.shields.io/badge/ArcMap-4479A1?style=for-the-badge&logo=esri&logoColor=white" alt="ArcMap" />
+    <img src="https://img.shields.io/badge/ArcGIS%20Pro-005C97?style=for-the-badge&logo=esri&logoColor=white" alt="ArcGIS Pro" />
+    <img src="https://img.shields.io/badge/QGIS-589632?style=for-the-badge&logo=qgis&logoColor=white" alt="QGIS" />
+    <img src="https://img.shields.io/badge/Google%20Colab-F9AB00?style=for-the-badge&logo=googlecolab&logoColor=black" alt="Google Colab" />
+
+    <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white" alt="Python" />
+    <img src="https://img.shields.io/badge/TensorFlow-FF6F00?style=for-the-badge&logo=tensorflow&logoColor=white" alt="TensorFlow" />
+    <img src="https://img.shields.io/badge/Keras-D00000?style=for-the-badge&logo=keras&logoColor=white" alt="Keras" />
+    <img src="https://img.shields.io/badge/Pandas-150458?style=for-the-badge&logo=pandas&logoColor=white" alt="Pandas" />
+
+    <!-- Fixed the Matplotlib badge to use the Matplotlib logo -->
+    <img src="https://img.shields.io/badge/Matplotlib-11557C?style=for-the-badge&logo=matplotlib&logoColor=white" alt="Matplotlib" />
+    <img src="https://img.shields.io/badge/R%20Studio-75AADB?style=for-the-badge&logo=rstudio&logoColor=white" alt="R Studio" />
+
+    <!-- Added per your request -->
+    <img src="https://img.shields.io/badge/AutoCAD-E4002B?style=for-the-badge&logo=autodesk&logoColor=white" alt="AutoCAD" />
+    <img src="https://img.shields.io/badge/CityEngine-2E7D32?style=for-the-badge&logo=esri&logoColor=white" alt="CityEngine" />
+  </div>
+</section>
+
     <!-- IELTS -->
     <section id="IELTS">
       <h2>
