--- a/index.html
+++ b/index.html
@@ -346,39 +346,153 @@
       </div>
     </section>
 
-    <section id="skills-badges">
+  <section id="skills-badges">
   <style>
+    /* Grid */
     #skills-badges .badge-grid{
       display: grid;
-      grid-template-columns: repeat(4, max-content); /* 4 columns */
-      gap: 12px 12px; /* tidy spacing */
-      align-items: center;
-      font-family: "Times New Roman", Times, serif; /* requested font */
+      grid-template-columns: repeat(4, 1fr); /* 4 columns */
+      gap: 18px 16px;
+      justify-items: center;
+      align-items: start;
+      font-family: "Times New Roman", Times, serif; /* your font */
     }
-    #skills-badges .badge-grid img{
+
+    /* Each item */
+    #skills-badges .skill{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 8px;
+      text-align: center;
+    }
+
+    /* Circular badge */
+    #skills-badges .icon{
+      width: 76px;
+      height: 76px;
+      border-radius: 50%;
+      background: var(--bg, #e5e7eb);        /* per-brand color below */
+      border: 1px solid rgba(0,0,0,.08);
+      box-shadow: 0 3px 10px rgba(0,0,0,.08);
+      display: grid;
+      place-items: center;
+      transition: transform .15s ease, box-shadow .15s ease;
+    }
+    #skills-badges .icon:hover{
+      transform: translateY(-2px);
+      box-shadow: 0 8px 18px rgba(0,0,0,.15);
+    }
+
+    /* Brand logo inside circle */
+    #skills-badges .icon img{
+      width: 40px;
+      height: 40px;
+      object-fit: contain;
       display: block;
-      height: 32px; /* keeps a neat row height regardless of label length */
+      filter: drop-shadow(0 1px 0 rgba(0,0,0,.05));
+    }
+
+    /* Label */
+    #skills-badges .label{
+      font-size: 14px;
+      line-height: 1.25;
+      color: #2C3E50;
+    }
+
+    /* Mobile tweak (optional) */
+    @media (max-width: 600px){
+      #skills-badges .badge-grid{ grid-template-columns: repeat(3, 1fr); } /* 3 cols on small screens */
     }
   </style>
 
-  <div class="badge-grid" aria-label="Tools and Platfroms">
-    <img src="https://img.shields.io/badge/ArcMap-4479A1?style=for-the-badge&logo=esri&logoColor=white" alt="ArcMap" />
-    <img src="https://img.shields.io/badge/ArcGIS%20Pro-005C97?style=for-the-badge&logo=esri&logoColor=white" alt="ArcGIS Pro" />
-    <img src="https://img.shields.io/badge/QGIS-589632?style=for-the-badge&logo=qgis&logoColor=white" alt="QGIS" />
-    <img src="https://img.shields.io/badge/Google%20Colab-F9AB00?style=for-the-badge&logo=googlecolab&logoColor=black" alt="Google Colab" />
+  <div class="badge-grid" aria-label="Skills and tools">
+    <!-- Row 1 -->
+    <figure class="skill" style="--bg:#4479A1"> <!-- ArcMap -->
+      <div class="icon">
+        <img src="https://cdn.simpleicons.org/esri/FFFFFF" alt="ArcMap logo">
+      </div>
+      <figcaption class="label">ArcMap</figcaption>
+    </figure>
 
-    <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white" alt="Python" />
-    <img src="https://img.shields.io/badge/TensorFlow-FF6F00?style=for-the-badge&logo=tensorflow&logoColor=white" alt="TensorFlow" />
-    <img src="https://img.shields.io/badge/Keras-D00000?style=for-the-badge&logo=keras&logoColor=white" alt="Keras" />
-    <img src="https://img.shields.io/badge/Pandas-150458?style=for-the-badge&logo=pandas&logoColor=white" alt="Pandas" />
+    <figure class="skill" style="--bg:#005C97"> <!-- ArcGIS Pro -->
+      <div class="icon">
+        <img src="https://cdn.simpleicons.org/esri/FFFFFF" alt="ArcGIS Pro logo">
+      </div>
+      <figcaption class="label">ArcGIS Pro</figcaption>
+    </figure>
 
-    <!-- Fixed the Matplotlib badge to use the Matplotlib logo -->
-    <img src="https://img.shields.io/badge/Matplotlib-11557C?style=for-the-badge&logo=matplotlib&logoColor=white" alt="Matplotlib" />
-    <img src="https://img.shields.io/badge/R%20Studio-75AADB?style=for-the-badge&logo=rstudio&logoColor=white" alt="R Studio" />
+    <figure class="skill" style="--bg:#589632"> <!-- QGIS -->
+      <div class="icon">
+        <img src="https://cdn.simpleicons.org/qgis/FFFFFF" alt="QGIS logo">
+      </div>
+      <figcaption class="label">QGIS</figcaption>
+    </figure>
 
-    <!-- Added per your request -->
-    <img src="https://img.shields.io/badge/AutoCAD-E4002B?style=for-the-badge&logo=autodesk&logoColor=white" alt="AutoCAD" />
-    <img src="https://img.shields.io/badge/CityEngine-2E7D32?style=for-the-badge&logo=esri&logoColor=white" alt="CityEngine" />
+    <figure class="skill" style="--bg:#F9AB00"> <!-- Google Colab -->
+      <div class="icon">
+        <img src="https://cdn.simpleicons.org/googlecolab/000000" alt="Google Colab logo">
+      </div>
+      <figcaption class="label">Google Colab</figcaption>
+    </figure>
+
+    <!-- Row 2 -->
+    <figure class="skill" style="--bg:#3776AB"> <!-- Python -->
+      <div class="icon">
+        <img src="https://cdn.simpleicons.org/python/FFFFFF" alt="Python logo">
+      </div>
+      <figcaption class="label">Python</figcaption>
+    </figure>
+
+    <figure class="skill" style="--bg:#FF6F00"> <!-- TensorFlow -->
+      <div class="icon">
+        <img src="https://cdn.simpleicons.org/tensorflow/FFFFFF" alt="TensorFlow logo">
+      </div>
+      <figcaption class="label">TensorFlow</figcaption>
+    </figure>
+
+    <figure class="skill" style="--bg:#D00000"> <!-- Keras -->
+      <div class="icon">
+        <img src="https://cdn.simpleicons.org/keras/FFFFFF" alt="Keras logo">
+      </div>
+      <figcaption class="label">Keras</figcaption>
+    </figure>
+
+    <figure class="skill" style="--bg:#150458"> <!-- Pandas -->
+      <div class="icon">
+        <img src="https://cdn.simpleicons.org/pandas/FFFFFF" alt="Pandas logo">
+      </div>
+      <figcaption class="label">Pandas</figcaption>
+    </figure>
+
+    <!-- Row 3 -->
+    <figure class="skill" style="--bg:#11557C"> <!-- Matplotlib -->
+      <div class="icon">
+        <img src="https://cdn.simpleicons.org/matplotlib/FFFFFF" alt="Matplotlib logo">
+      </div>
+      <figcaption class="label">Matplotlib</figcaption>
+    </figure>
+
+    <figure class="skill" style="--bg:#75AADB"> <!-- RStudio -->
+      <div class="icon">
+        <img src="https://cdn.simpleicons.org/rstudio/FFFFFF" alt="RStudio logo">
+      </div>
+      <figcaption class="label">R Studio</figcaption>
+    </figure>
+
+    <figure class="skill" style="--bg:#E4002B"> <!-- AutoCAD -->
+      <div class="icon">
+        <img src="https://cdn.simpleicons.org/autodesk/FFFFFF" alt="AutoCAD logo">
+      </div>
+      <figcaption class="label">AutoCAD</figcaption>
+    </figure>
+
+    <figure class="skill" style="--bg:#2E7D32"> <!-- CityEngine (uses Esri mark) -->
+      <div class="icon">
+        <img src="https://cdn.simpleicons.org/esri/FFFFFF" alt="CityEngine logo">
+      </div>
+      <figcaption class="label">CityEngine</figcaption>
+    </figure>
   </div>
 </section>
 
