--- a/index.html
+++ b/index.html
@@ -346,16 +346,16 @@
       </div>
     </section>
 
-  <section id="skills-badges">
+ <section id="skills-badges">
   <style>
-    /* Grid */
+    /* Grid: 7 columns, 2 rows */
     #skills-badges .badge-grid{
       display: grid;
-      grid-template-columns: repeat(4, 1fr); /* 4 columns */
+      grid-template-columns: repeat(7, 1fr); /* 7 columns */
       gap: 18px 16px;
       justify-items: center;
       align-items: start;
-      font-family: "Times New Roman", Times, serif; /* your font */
+      font-family: "Times New Roman", Times, serif;
     }
 
     /* Each item */
@@ -372,7 +372,7 @@
       width: 76px;
       height: 76px;
       border-radius: 50%;
-      background: var(--bg, #e5e7eb);        /* per-brand color below */
+      background: var(--bg, #e5e7eb);
       border: 1px solid rgba(0,0,0,.08);
       box-shadow: 0 3px 10px rgba(0,0,0,.08);
       display: grid;
@@ -400,14 +400,24 @@
       color: #2C3E50;
     }
 
-    /* Mobile tweak (optional) */
-    @media (max-width: 600px){
-      #skills-badges .badge-grid{ grid-template-columns: repeat(3, 1fr); } /* 3 cols on small screens */
+    /* Responsive tweaks (optional) */
+    @media (max-width: 1100px){
+      #skills-badges .badge-grid{ grid-template-columns: repeat(6, 1fr); }
+    }
+    @media (max-width: 900px){
+      #skills-badges .badge-grid{ grid-template-columns: repeat(5, 1fr); }
+    }
+    @media (max-width: 700px){
+      #skills-badges .badge-grid{ grid-template-columns: repeat(4, 1fr); }
+    }
+    @media (max-width: 480px){
+      #skills-badges .badge-grid{ grid-template-columns: repeat(3, 1fr); }
     }
   </style>
 
   <div class="badge-grid" aria-label="Skills and tools">
-    <!-- Row 1 -->
+
+    <!-- Row 1 (GIS & Platforms) -->
     <figure class="skill" style="--bg:#4479A1"> <!-- ArcMap -->
       <div class="icon">
         <img src="https://cdn.simpleicons.org/esri/FFFFFF" alt="ArcMap logo">
@@ -429,6 +439,13 @@
       <figcaption class="label">QGIS</figcaption>
     </figure>
 
+    <figure class="skill" style="--bg:#1A73E8"> <!-- Google Earth (for Earth Engine) -->
+      <div class="icon">
+        <img src="https://cdn.simpleicons.org/googleearth/FFFFFF" alt="Google Earth Engine logo">
+      </div>
+      <figcaption class="label">Google Earth Engine</figcaption>
+    </figure>
+
     <figure class="skill" style="--bg:#F9AB00"> <!-- Google Colab -->
       <div class="icon">
         <img src="https://cdn.simpleicons.org/googlecolab/000000" alt="Google Colab logo">
@@ -436,7 +453,21 @@
       <figcaption class="label">Google Colab</figcaption>
     </figure>
 
-    <!-- Row 2 -->
+    <figure class="skill" style="--bg:#E4002B"> <!-- AutoCAD -->
+      <div class="icon">
+        <img src="https://cdn.simpleicons.org/autodesk/FFFFFF" alt="AutoCAD logo">
+      </div>
+      <figcaption class="label">AutoCAD</figcaption>
+    </figure>
+
+    <figure class="skill" style="--bg:#2E7D32"> <!-- CityEngine (Esri mark) -->
+      <div class="icon">
+        <img src="https://cdn.simpleicons.org/esri/FFFFFF" alt="CityEngine logo">
+      </div>
+      <figcaption class="label">CityEngine</figcaption>
+    </figure>
+
+    <!-- Row 2 (Data Science & ML) -->
     <figure class="skill" style="--bg:#3776AB"> <!-- Python -->
       <div class="icon">
         <img src="https://cdn.simpleicons.org/python/FFFFFF" alt="Python logo">
@@ -465,12 +496,18 @@
       <figcaption class="label">Pandas</figcaption>
     </figure>
 
-    <!-- Row 3 -->
     <figure class="skill" style="--bg:#11557C"> <!-- Matplotlib -->
       <div class="icon">
         <img src="https://cdn.simpleicons.org/matplotlib/FFFFFF" alt="Matplotlib logo">
       </div>
       <figcaption class="label">Matplotlib</figcaption>
+    </figure>
+
+    <figure class="skill" style="--bg:#F89939"> <!-- scikit-learn -->
+      <div class="icon">
+        <img src="https://cdn.simpleicons.org/scikitlearn/FFFFFF" alt="scikit-learn logo">
+      </div>
+      <figcaption class="label">scikit-learn</figcaption>
     </figure>
 
     <figure class="skill" style="--bg:#75AADB"> <!-- RStudio -->
@@ -480,21 +517,9 @@
       <figcaption class="label">R Studio</figcaption>
     </figure>
 
-    <figure class="skill" style="--bg:#E4002B"> <!-- AutoCAD -->
-      <div class="icon">
-        <img src="https://cdn.simpleicons.org/autodesk/FFFFFF" alt="AutoCAD logo">
-      </div>
-      <figcaption class="label">AutoCAD</figcaption>
-    </figure>
-
-    <figure class="skill" style="--bg:#2E7D32"> <!-- CityEngine (uses Esri mark) -->
-      <div class="icon">
-        <img src="https://cdn.simpleicons.org/esri/FFFFFF" alt="CityEngine logo">
-      </div>
-      <figcaption class="label">CityEngine</figcaption>
-    </figure>
   </div>
 </section>
+
 
     <!-- IELTS -->
     <section id="IELTS">
